--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,11 +1,11 @@
-<!doctype html>
-<html>
-    <title>Upload new icon</title>
-    <body>
-    <h1>Upload new icon</h1>
-    <form method=post enctype=multipart/form-data>
-      <input type=file name=file>
-      <input type=submit value=Upload>
-    </form>
-  </body>
-</html>
+{% extends "base.html" %}
+
+{% block content %}
+  <h1>Unitar</h1>
+  <hr>
+  <h2>Upload new icon</h2>
+  <form method=post enctype=multipart/form-data>
+    <input type=file name=file>
+    <input type=submit value=Upload>
+  </form>
+{% endblock content %}
