--- a/templates/base.html
+++ b/templates/base.html
@@ -5,13 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    {% assets 'css' %}
-      <link rel="stylesheet" href="{{ ASSET_URL }}">
-    {% endassets %}
-
     <title>Flask + Tailwind CSS = Unitar?</title>
   </head>
-  <body class="bg-blue-100">
+  <body>
     {% block content %}
     {% endblock content %}
   </body>
