--- a/templates/upload.html
+++ b/templates/upload.html
@@ -6,6 +6,7 @@
 <h2>Upload new icon</h2>
 <form method=post enctype=multipart/form-data>
   <input type=file name=file>
+  <input type=text name=uname>
   <input type=submit value=Upload>
 </form>
 {% endblock content %}
