--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Flask + Tailwind CSS = Unitar?</title>
+    <title>Unitar POC</title>
   </head>
   <body>
     {% block content %}
