--- a/templates/user.html
+++ b/templates/user.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 {% for icon in icons %}
-<p>{{ icon }}</p>
+<img src = "/icons/{{ icon }}">
 {% endfor %}
 
 {% endblock content %}
