Basic index page and user page fixes

--- a/templates/user.html
+++ b/templates/user.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 {% for icon in icons %}
-<img src = "/icons/{{ icon }}">
+<a href="/set/{{ uname }}/{{ icon }}"><img src = "/icons/{{ icon }}"></a>
 {% endfor %}
 
 {% endblock content %}
